# claude-yolt

./: .eslintrc.json  .gitignore  .mise.toml  .npmignore  ACTION_PLAN.md  CLAUDE_PROCESS_SAFETY.md  CODE_REVIEW.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY_ANALYSIS.md  SESSION.md  benchmark-process-manager.js  bug-hunt.js  build.js  claude-cli-issue.md  demo-memory-leaks.js  deno.json  eslint.config.js  example-claude-md-snippet.md  install.sh  mise.toml  package-lock.json  package.json  postinstall.js  test-cargo-explosion.js  test-fd-explosion.js  test-memory-leaks.js  test-process-limiter.js  test-security.js  test.js  validate-memory-detection.js
.claude/: settings.local.json
.github/: auto-merge.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: AUTH.md  README.md  (+27 more)
k8s/: deployment.yaml
lib/: api-server.js  auth-manager.js  bug-workarounds.js  config.js  consent.js  hang-detector.js  logger.js  memory-leak-detector.js  metrics.js  multi-user.js  process-interceptor-optimized.js  process-interceptor.js  process-limiter.js  process-manager-native.js  router.js  rust-process-client.js  safety.js  stream-handler.js  system-limits.js  yolo.js
reports/: memory-leak-report-2025-06-13T23-17-59-340Z.json  memory-leak-report-2025-06-13T23-17-59-340Z.md  memory-leak-report-2025-06-13T23-22-45-769Z.json  memory-leak-report-2025-06-13T23-22-45-769Z.md
rust/: Cargo.toml
rust-process-manager/: Cargo.toml
rust-process-manager/src/: ipc.rs  main.rs
rust/src/: lib.rs
systemd/: claude-yolt-monitor.service  claude-yolt.service
(+3 files in other folders)
