[package]
name = "claude-process-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sysinfo = "0.37"
nix = { version = "0.30", features = ["process", "signal"] }
libc = "0.2"
crossbeam = "0.8"
dashmap = "6.1"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "claude-process-guard"
path = "src/main.rs"